# lite-google-workspace-mcp

./: README.md  pyproject.toml
contrib/: lite-google-workspace-mcp@.service  workspace-mcp-lite@.service
docs/superpowers/plans/: 2026-06-08-workspace-mcp-lite.md
docs/superpowers/specs/: 2026-06-08-workspace-mcp-lite-design.md
src/lite_google_workspace_mcp/: auth.py  calendar.py  cli.py  gmail.py  server.py
src/workspace_mcp_lite/: auth.py  cli.py  responses.py  server.py
tests/: test_auth.py  test_calendar.py  test_gmail.py
