[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "workspace-mcp-lite"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]",
    "google-auth",
    "google-auth-oauthlib",
    "google-api-python-client",
]

[project.scripts]
workspace-mcp-lite = "workspace_mcp_lite.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "pre-commit",
]

[tool.ruff]
target-version = "py313"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
