[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lite-google-workspace-mcp"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]",
    "google-auth",
    "google-auth-oauthlib",
    "google-api-python-client",
]

[project.scripts]
lite-google-workspace-mcp = "lite_google_workspace_mcp.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "pre-commit",
]

[tool.ruff]
target-version = "py313"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
